--- a/restaurants/templates/detail.html
+++ b/restaurants/templates/detail.html
@@ -23,9 +23,16 @@
             <a href="{% url 'restaurant-delete' restaurant.id %}" class="btn btn-outline-danger btn-block">Delete</a>
         </div>
          <div class="col-md-6">
-            <a href="{% url 'item-create' restaurant.id %}" class="btn btn-outline-danger btn-block">Create Item</a>
+            <a href="{% url 'item-create' restaurant.id %}" class="btn btn-outline-primary btn-block">Create Item</a>
         </div>
     </div>
   </div>
 </div>
+{% for item in restaurant.items.all %}
+<ul>
+<li> {{item.name}}</li>
+<li> {{item.description}}</li>
+<li> {{item.price}}</li>
+</ul>
+{% endfor %}
 {% endblock content %}
